@@ -57,6 +57,8 @@ Features
 
 * Added `graphite` module with helpers allowing to generate graphite metrics for counters and timeseries (#1461).
 
+* Added SSL/TLS support to HttpListenInput (#1534)
+
 Bug Handling
 ------------
 
